--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,7 +10,7 @@
 // bower:scss
 // endbower
 @import "../../bower_components/uikit/scss/components/accordion.scss";
-
+@import "../../bower_components/uikit/scss/components/sticky.scss";
 
 @import "common/global";
 @import "common/nathan-global";
