--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,8 +13,8 @@
 @import "../../bower_components/uikit/scss/components/sticky.scss";
 
 @import "common/global";
-@import "common/nathan-global";
-@import "components/buttons";
+// @import "common/nathan-global";
+// @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
 @import "components/grid";
