--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -19,6 +19,7 @@
 }
 
 
+
 table {
 	@extend .uk-table;
 }
@@ -120,6 +121,14 @@ li.menu-item i {
 
 #breadcrumbs{margin-top: 10px;}
 
+.home .page-header h1 {
+	@extend .visuallyhidden;
+}
+
+.single-person .entry-content h2{
+
+}
 //TEMP FIX
 
 figure{padding-right: 20px;}
+.archive ul {list-style: none;}
