--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -4,12 +4,27 @@
 	@extend $control-height;
 }
 
-.visuallyhidden { 
+.visuallyhidden,
+.offscreen { 
   position: absolute; 
   overflow: hidden; 
   clip: rect(0 0 0 0); 
   height: 1px; width: 1px; 
   margin: -1px; padding: 0; border: 0; 
+}
+
+.hide-text {
+         text-indent: 100%;
+         white-space: nowrap;
+         overflow: hidden;
+       }
+
+.nhs { // NHS logo swap out for text, with accessibility *Takes bow*. Use the above hide-text class also
+	display: inline-block;
+	width: 50px;
+	height: 20px;
+	background: url(../images/nhs.png) no-repeat;
+	margin: 0 0 -4px;
 }
 
 /* use this when extending a uikit grid style */
@@ -104,6 +119,11 @@ li.menu-item i {
 
 	}
 }
+
+#menu-right-1 li:first-child a {
+	text-transform: none;
+}
+
 
 // Page subnav
 .pagenav {
