--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -67,6 +67,17 @@ $dark-grey-blanket: ($neutral url('../images/textures/diagonal-noise.png') repea
 	 background-blend-mode: multiply;	 
 }
 
+// IE only backgrounds - use only in IE css, thanks!
+
+$ie-dark-orange: ($primary-dark url('../images/ie/ie-orange-crush-dark.png') repeat);
+$ie-orange-crush: ($primary-medium url('../images/ie/ie-orange-crush.png') repeat);
+$ie-orange-crush-lite: ($primary-light url('../images/ie/ie-orange-crush-lite.png') repeat);
+$ie-blue-crush: ($brand-secondary url('../images/ie/ie-blue-crush.png') repeat);
+$ie-blue-crush-lite: ($secondary-lighter url('../images/ie/ie-blue-crush.png') repeat);
+$ie-blue-crush-dark: ($brand-secondary url('../images/ie/ie-blue-crush.png') repeat);
+$ie-grey-blanket: ($neutral-light url('../images/ie/ie-neutral.png') repeat);
+$ie-dark-grey-blanket: ($neutral url('../images/ie/ie-grey-blanket.png') repeat);
+
 
 // Base
 
@@ -180,9 +191,10 @@ h2::after {
 }
 
 
-h3 a {
+.pagenav h3 a {
 	color: $text-light;
 }
+
 // NAVBAR
 
 
@@ -214,7 +226,7 @@ $navbar-flip-nav-hover-color:                     $text-light;
 $navbar-nav-onclick-background:                  $grey-blanket;
 $navbar-nav-onclick-color:                       $text-light;
 $navbar-nav-active-background:                   $orange-crush;
-$navbar-nav-active-color:                        $text-dark;
+
 // $navbar-nav-subtitle-font-size:                  10px !default;
 // $navbar-nav-subtitle-offset:                     2px !default;
 
@@ -450,7 +462,7 @@ $panel-title-text-transform:                     uppercase;
 $panel-box-background: 							$grey-blanket;
 $panel-box-color:                                $text-light;
 $panel-box-hover-color:                          $panel-box-color !default;
-$panel-box-title-color:                          #444 !default;
+// $panel-box-title-color:                          #444 !default;
 
 // $panel-box-badge-top:                            10px !default;
 // $panel-box-badge-right:                          $panel-box-badge-top !default;
@@ -478,17 +490,17 @@ $panel-hover-hover-color:                        $text-light;
 // $panel-hover-badge-right:                        $panel-hover-badge-top !default;
 // $panel-hover-teaser-margin:                      $panel-hover-padding !default;
 
-$panel-header-title-padding:                     10px !default;
-$panel-header-title-border:                      #ddd !default;
+//$panel-header-title-padding:                     10px !default;
+// $panel-header-title-border:                      #ddd !default;
 $panel-header-title-border-width:                1px !default;
-$panel-header-title-color:                       #444 !default;
+$panel-header-title-color:                       $text-dark;
 
-$panel-space-padding:                            30px !default;
+// $panel-space-padding:                            30px !default;
 
-$panel-divider-gutter:                           25px !default;
-$panel-divider-gutter-large:                     35px !default;
-$panel-divider-border:                           #ddd !default;
-$panel-divider-border-width:                     1px !default;
+// $panel-divider-gutter:                           25px !default;
+// $panel-divider-gutter-large:                     35px !default;
+// $panel-divider-border:                           #ddd !default;
+// $panel-divider-border-width:                     1px !default;
 
 // $panel-body-padding:                             $panel-box-padding !default;
 
@@ -539,6 +551,7 @@ color: $text-light;
 
 
 
+
 /*.cat-panel h4 {
 	   overflow: hidden;
     white-space: nowrap;
@@ -556,6 +569,7 @@ $accordion-title-font-size:                      24px;
 $accordion-title-colour: 						$text-dark;
 // $accordion-title-line-height:                    24px !default;
 $accordion-title-background:                     $grey-blanket;
+$accordion-title-background-hover:                  $dark-grey-blanket;
 $accordion-title-background-active: $orange-crush-lite;
 $accordion-content-padding-horizontal:           2em;
 $accordion-content-padding-bottom:               3em;
@@ -564,6 +578,9 @@ $accordion-content-padding-bottom:               3em;
 
 @mixin hook-accordion-title(){
 	 @include block-colours($accordion-title-background, $accordion-title-colour);
+	 &:hover {
+	 @include block-colours($accordion-title-background-hover, $text-light);
+	 }
 	 	}
 
 @mixin hook-accordion-content() {
@@ -571,7 +588,7 @@ $accordion-content-padding-bottom:               3em;
 }
 .uk-accordion-title.uk-active {
 	@include block-colours($accordion-title-background-active, $text-light);
-	// background: $accordion-title-background-active;
+	
 }
 
 /*.uk-accordion ul {
@@ -650,6 +667,13 @@ $tab-hover-background: $neutral-light;
 // @mixin hook-tab-active(){}
 // @mixin hook-tab-disabled(){}
 // @mixin hook-tab-misc(){}*/
+
+
+// PEOPLE
+
+.people .uk-panel-box img {
+	@extend .uk-border-rounded;
+}
 
 
 
